--- a/css/style.css
+++ b/css/style.css
@@ -278,10 +278,12 @@ body {
 }
 .nosotros_historia .historia_img .img_grupo .img_foto {
   margin: 2%;
+  /* Aplicando mixin */
 }
 .nosotros_historia .historia_img .img_grupo .img_foto img {
   width: 25rem;
   border-radius: 1rem;
+  box-shadow: 1px 1px 5px black;
 }
 
 /* Pagina de F.A.Q */
@@ -538,7 +540,7 @@ body {
     padding: 2%;
   }
   .stock .stock_container {
-    transform: translate(7%);
+    transform: translate(8%);
   }
   .stock .stock_container .stock_card {
     width: 15rem;
@@ -601,7 +603,7 @@ body {
 }
 @media (max-width: 700px) {
   .stock .stock_container {
-    transform: translate(5%);
+    transform: translate(6%);
   }
   .vehiculos .stock_card {
     width: 13rem;
@@ -614,6 +616,9 @@ body {
   }
 }
 @media (max-width: 576px) {
+  .stock .stock_container {
+    margin-left: 7%;
+  }
   .stock .stock_container .stock_card {
     width: 12rem;
   }
@@ -640,12 +645,12 @@ body {
   }
 }
 @media (max-width: 500px) {
+  .menu label {
+    margin-top: 4%;
+  }
   .menu span {
     font-size: 1.5rem;
-    transform: translate(-10%, 15%);
-  }
-  .stock .stock_container {
-    transform: translate(7%);
+    margin-top: 2%;
   }
   .stock .stock_container .stock_card {
     width: 10rem;
@@ -660,9 +665,10 @@ body {
 @media (max-width: 400px) {
   .menu span {
     font-size: 1.2rem;
+    margin-top: 3%;
   }
   .stock .stock_container {
-    margin-left: 0;
+    transform: translate(2%);
   }
   .catalogo .numeracion {
     margin-top: 5%;
